# ooklept

./: .gitignore  Features.md  README.md  pyproject.toml
.github/workflows/: release.yml
sample/sample_site/: index.py
sample/simple_calculator/: index.py  int.txt
sample/simple_note/: index.py  notes.txt
src/: 1.py  gen.py  testy.html  testy.py
src/ooklept/: __init__.py  arbit.txt  base.py  cache.py  commented.py  cookies.py  csrf.py  helper.py  nojsonlycss.py  o.py  serve.py  sharding.py  storage_classes.py  stores.py  utility.py  webtype_gen.py  webtypes.py
src/ooklept/tags/: tags_dump.py  tags_gen.py
src/ooklept/webdata/: valueSets.json
tests/: test_base.py
