[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "ooklept"
version = "1.0"
authors = [
  { name="Dr. Sandipan Chowdhury", email="kindleofsandipan@gmail.com" },
]
description = "A Python DSL for HTML + CSS"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/dr-sandipan-chowdhury/ooklept"
Issues = "https://github.com/dr-sandipan-chowdhury/ooklept/issues"

[tool.pytest.ini_options]
pythonpath = ["src"]
